--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 		</h1>
 
 		<div>
-			<t>Loan amount: </t><input id = "loan" value="500000">
-		</div>
-		<div>
-			<t>Interest rate (annual): </t><input id = "rate" value = '.06'>
+			<t>Loan amount: </t><input id = "loan" value="$500,000">
 		</div>
 		<div>
 			<t>Loan period in years: </t><input id = "period" value = '30'>
 		</div>
 		<div>
 			<t>Number of payments per year: </t><input id = "nper" value = '12'>
+		</div>
+		<div>
+			<t>Interest rate (annual): </t><input id = "rate" value = '6.000%' hidden> <t> 6.000%</t>
 		</div>
 		<div>
 			<t>Monthly payment: </t><t id = 'monthly'></t>
