--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<div style= "margin: 20px 0 20px 0";>
 									<div class = "backtextbox pink"><div class = "backtext">Loan amount: </div></div>
 									<div class = "backtextbox"><div class = "backtext">Loan period in years: </div></div>
-									<div class = "backtextbox blue"><div class = "backtext">Number of payments per year: </div></div>
+									<div class = "backtextbox blue"><div class = "backtext">Payments per year: </div></div>
 									<div class = "backtextbox"><div class = "backtext">Interest rate (annual): </div></div>
 									<div class = "backtextbox pink"><div class = "backtext">Monthly payment: </div></div>
 									<div class = "backtextbox"><div class = "backtext">Total Payments: </div></div>
