--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 					<div class = "img-hldr-3"> <img src = "Team JC Logo_Final.jpg" id = "image-three">
 					</div>
 					<div class = "contact">
-						<div>206 Washington Street, Suite 202</div>
+						<div>206 Washington Street,</div>
+						<div>Suite 202</div>
 						<div>Norwell, MA 02061</div>
 						<div>jcelia@loandepot.com</div>
 						<div>(617) 407 - 2524</div>
@@ -69,7 +70,7 @@
 				</div>
 			</div>
 
-			<div style = "float:left">
+			<div style = "width:100%">
 				<div class = "titlerow"><div class = "titlerow-text">3-2-1 Buy Down</div></div>
 				<div class = "table head" id = "table three">
 					<div class = "table column">
