--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				</div>
 				<div class = "summaryrow">
 					<div class = "backtextbox fivesixths"> <div class = backtext> 3-2-1 Buy Down Cost:</div></div>
-					<div class = "backtextbox onesixth"><div class = backtext> $7.00</div></div>
+					<div class = "backtextbox onesixth"><div class = backtext id = "btm3"> $7.00</div></div>
 				</div>
 
 				<div class = "titlerow"><div class = "titlerow-text">2-1 Buy Down</div></div>
@@ -273,7 +273,7 @@
 
 				<div class = "summaryrow">
 					<div class = "backtextbox fivesixths pink"> <div class = "backtext"> 2-1 Buy Down Cost:</div></div>
-					<div class = "backtextbox onesixth pink"><div class = backtext> $7.00</div></div>
+					<div class = "backtextbox onesixth pink"><div class = backtext id = "btm2"> $7.00</div></div>
 				</div>
 
 				<div class = "titlerow"><div class = "titlerow-text">1-0 Buy Down</div></div>
@@ -349,7 +349,7 @@
 
 				<div class = "summaryrow">
 					<div class = "backtextbox fivesixths"> <div class = backtext> 1-0 Buy Down Cost:</div></div>
-					<div class = "backtextbox onesixth"><div class = backtext> $7.00</div></div>
+					<div class = "backtextbox onesixth"><div class = backtext id = "btm1"> $7.00</div></div>
 				</div>
 			</div>
 		</div>
