--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 					</div>
 
 					<div class = "table column">
-						<div class = "table cell backtextbox"></div>
+						<div class = "table cell backtextbox"><div class = "backtext">Annual</div></div>
 						<div class = "table cell backtextbox pink">
-							<div class = "backtext">Annual Payments</div>
+							<div class = "backtext">Payments</div>
 						</div>
 						<div class = "table cell backtextbox">
 							<div class = "backtext">3%</div>
@@ -257,9 +257,9 @@
 					</div>
 
 					<div class = "table column">
-						<div class = "table cell backtextbox"></div>
+						<div class = "table cell backtextbox"><div class = "backtext">Annual</div></div>
 						<div class = "table cell backtextbox pink">
-							<div class = "backtext">Annual Payments</div>
+							<div class = "backtext">Payments</div>
 						</div>
 						<div class = "table cell backtextbox">
 							<div class = "backtext">2%</div>
@@ -336,9 +336,9 @@
 					</div>
 
 					<div class = "table column">
-						<div class = "table cell backtextbox"></div>
+						<div class = "table cell backtextbox"><div class = "backtext">Annual</div></div>
 						<div class = "table cell backtextbox pink">
-							<div class = "backtext">Annual Payments</div>
+							<div class = "backtext">Payments</div>
 						</div>
 						<div class = "table cell backtextbox">
 							<div class = "backtext">1%</div>
