--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 						</div>
 						<div class="leftside">
 							<div style= "margin: 22px 0 20px 0";>
-								<div class = "calcdatacontainer"><input id = "loan" value="$500,000" class="calcdata"></div>
+								<div class = "calcdatacontainer"><div class = "pindata">$</div><input id = "loan" value="500,000" class="calcdata short"></div>
 								<div class = "calcdatacontainer"><input id = "period" value = '30' class="calcdata"></div>
 								<div class = "calcdatacontainer"><input id = "nper" value = '12' class="calcdata"></div>
-								<div class = "calcdatacontainer"><input id = "rate" value = '6.000%' class="calcdata"></div> 
-								<div class = "calcdatacontainer" hidden><div class="calcdata"> 6.000%</div></div>
+								<div class = "calcdatacontainer"><input id = "rate" value = '6.000' class="calcdata short"><div class = "pindata">%</div></div> 
+								<div class = "calcdatacontainer" hidden><div class="calcdata"> 6.000</div><t>%</t></div>
 								<div class = "calcdatacontainer"><div id = 'monthly'class="calcdata"></div></div>
 								<div class = "calcdatacontainer"><div id = 'totalpmt' class="calcdata"></div></div>
 							</div>
@@ -61,8 +61,7 @@
 					<div class = "img-hldr-3"> <img src = "Team JC Logo_Final.jpg" id = "image-three">
 					</div>
 					<div class = "contact">
-						<div>306 Washington Street,</div>
-						<div>Suite 202</div>
+						<div>306 Washington St. Ste 202,</div>
 						<div>Norwell, MA 02061</div>
 						<div>jcelia@loandepot.com</div>
 						<div>(617) 407 - 2524</div>
