--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 						</div>
 						<div class="leftside">
 							<div style= "margin: 22px 0 20px 0";>
-								<div class = "calcdatacontainer"><div class = "pindata">$</div><input id = "loan" value="500,000" class="calcdata short"></div>
+								<div class = "calcdatacontainer"><div class = "pindata">$</div><input id = "loan" value="500,000" class="calcdata shortleft"></div>
 								<div class = "calcdatacontainer"><input id = "period" value = '30' class="calcdata"></div>
 								<div class = "calcdatacontainer"><input id = "nper" value = '12' class="calcdata"></div>
-								<div class = "calcdatacontainer"><input id = "rate" value = '6.000' class="calcdata short"><div class = "pindata">%</div></div> 
+								<div class = "calcdatacontainer"><input id = "rate" value = '6.000' class="calcdata shortright"><div class = "pindata">%</div></div> 
 								<div class = "calcdatacontainer" hidden><div class="calcdata"> 6.000</div><t>%</t></div>
-								<div class = "calcdatacontainer"><div id = 'monthly'class="calcdata"></div></div>
+								<div class = "calcdatacontainer"><div class = "pindata">$</div><div id = 'monthly'class="calcdata shortleft"></div></div>
 								<div class = "calcdatacontainer"><div id = 'totalpmt' class="calcdata"></div></div>
 							</div>
 						</div>
