--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="mrgstyle.css">
 	<body>
-		<div>
+		<div style="height: 5000px;">
 			<div class = "calculator-container">
 				<div class = "quarter-holder">
 
@@ -69,7 +69,7 @@
 				</div>
 			</div>
 
-			<div style = "width:100%">
+			<div style = "width:100%; height: 1860px;">
 				<div class = "titlerow"><div class = "titlerow-text">3-2-1 Buy Down</div></div>
 				<div class = "table head" id = "table three">
 					<div class = "table column">
@@ -349,6 +349,31 @@
 				<div class = "summaryrow">
 					<div class = "backtextbox fivesixths"> <div class = backtext> 1-0 Buy Down Cost:</div></div>
 					<div class = "backtextbox onesixth"><div class = backtext id = "btm1"> $7.00</div></div>
+				</div>
+			</div>
+			<div class = "mobileonly">
+				<div class = "image-centerer">
+					<div class="img-hldr-4" > <img src = "Susan Bollinger4.png" style= "width: 100%;">
+					</div>
+					<div class="img-hldr-4"> <img src = "BC_STACKED_white_lightblue.png"  style="position: relative; top: 80px;width: 100%;">
+					</div>
+				</div>
+				<div class = "mobile-contact-holder">
+					<div class = "contact blue">
+						<div>19 Mattakeesett St</div>
+						<div>Pembroke, MA 02359</div>
+						<div>sbollinger@bostonconnect.com</div>
+						<div>(508) 317-5729</div>
+					</div>
+				</div>
+				<div class = "img-hldr-5"> <img src = "Team JC Logo_Final.jpg" id = "image-three"></div>
+				<div class = "mobile-contact-holder">
+					<div class = "contact">
+						<div>306 Washington St. Ste 202,</div>
+						<div>Norwell, MA 02061</div>
+						<div>jcelia@loandepot.com</div>
+						<div>(617) 407 - 2524</div>
+					</div>
 				</div>
 			</div>
 		</div>
