fixing window size

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="mrgstyle.css">
 	<body>
-		<div style="height: 5000px;">
+		<div id = "full-app-container">
 			<div class = "calculator-container">
 				<div class = "quarter-holder">
 
@@ -69,7 +69,7 @@
 				</div>
 			</div>
 
-			<div style = "width:100%; height: 1860px;">
+			<div class = "table-holder">
 				<div class = "titlerow"><div class = "titlerow-text">3-2-1 Buy Down</div></div>
 				<div class = "table head" id = "table three">
 					<div class = "table column">
@@ -355,7 +355,7 @@
 				<div class = "image-centerer">
 					<div class="img-hldr-4" > <img src = "Susan Bollinger4.png" style= "width: 100%;">
 					</div>
-					<div class="img-hldr-4"> <img src = "BC_STACKED_white_lightblue.png"  style="position: relative; top: 80px;width: 100%;">
+					<div class="img-hldr-4"> <img src = "BC_STACKED_white_lightblue.png"  style="position: relative; top: 20px;width: 100%;">
 					</div>
 				</div>
 				<div class = "mobile-contact-holder">
@@ -366,7 +366,7 @@
 						<div>(508) 317-5729</div>
 					</div>
 				</div>
-				<div class = "img-hldr-5"> <img src = "Team JC Logo_Final.jpg" id = "image-three"></div>
+				<div class = "img-hldr-5"> <img src = "Team JC Logo_Final.jpg" style="width: 50%; margin: 0 25% 0 25%;"></div>
 				<div class = "mobile-contact-holder">
 					<div class = "contact">
 						<div>306 Washington St. Ste 202,</div>
